Tue Jul 18 19:07:02 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Do not perform slash conversion on the 'prebuild' and 'postbuild'
          settings.

        * templates/vc8csharp.mpd:

          Keep the 'prebuild' and 'postbuild' settings on the same line as
          vc8 does.

Tue Jul 18 14:38:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Modified the library location code to accept libraries that
          happen to be built in the very top-most directory.

Tue Jul 18 13:49:01 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Corrected a logic error in the processing of the 'optional'
          section.  The '||' was not being handled properly.

Fri Jul 14 17:25:16 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          When expanding variables, through the 'expand' mechanism, escape
          back slashes when generating a project for a project type that
          requires slash conversion.

Fri Jul 14 01:10:35 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * config/qt.mpb:

          Split the UIC into UIC and UIC_Impl.  The header is generated by
          the UIC custom definition and the source file generated by the
          UIC_Impl custom definition.

        * config/qt4_core.mpb:
        * config/qt4_designer.mpb:
        * config/qt4_designercomponents.mpb:
        * config/qt4_gui.mpb:
        * config/qt4_network.mpb:
        * config/qt4_opengl.mpb:
        * config/qt4_sql.mpb:
        * config/qt4_svg.mpb:
        * config/qt4_test.mpb:
        * config/qt4_xml.mpb:

          Added support for Qt4.

        * config/qt_moc.mpb:
        * config/qt_uic.mpb:

          Removed these files.  They have been deprecated long enough.

Thu Jul 13 16:29:33 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd: